# hs-opentelemetry

./: .editorconfig  .env  .envrc  .gitignore  .gitmodules  .sosrc  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  JJ-CONFLICT-README  LICENSE  Makefile  README.md  apm.lock.yaml  apm.yml  cabal.project  cabal.project.freeze  docker-compose.yaml  flake.nix  fourmolu.yaml  garnix.yaml  hie.yaml  opentelemetry-haskell.cabal  package-common.yaml  package.yaml  shell.nix  spec-compliance.md  stack-ghc-8.10.yaml  stack-ghc-8.12.yaml  stack-ghc-9.0.yaml  stack-ghc-9.10.yaml  stack-ghc-9.12.yaml  stack-ghc-9.2.yaml  stack-ghc-9.4.yaml  stack-ghc-9.6.yaml  stack-ghc-9.8.yaml  stack.nix  stack.yaml
.agency/: do.md
.apm/instructions/: conventions.instructions.md
.claude/: settings.local.json
.claude/rules/: conventions.md
.github/: FUNDING.yml
.github/workflows/: haskell.yml
.jjconflict-base-0/: README.md  hie.yaml  stack.yaml
.jjconflict-base-0/nix/: matrix.nix
.jjconflict-base-1/: .env  stack-ghc-9.6.yaml
.jjconflict-base-1/api/: package.yaml
.jjconflict-base-1/sdk/: ChangeLog.md
.jjconflict-base-1/semantic-conventions/: Makefile
.jjconflict-side-0/: stack-ghc-9.12.yaml  stack-ghc-9.4.yaml
.jjconflict-side-0/otlp/: README.md  hs-opentelemetry-otlp.cabal
.jjconflict-side-0/scripts/: upload-all
.jjconflict-side-1/: README.md
.jjconflict-side-1/sdk/: hs-opentelemetry-sdk.cabal  package.yaml
.jjconflict-side-2/: .hlint.yaml  flake.nix  garnix.yaml  stack-ghc-9.8.yaml
api/: ChangeLog.md  README.md  hs-opentelemetry-api.cabal  otel-api.cabal  package.yaml
api-types/: CHANGELOG.md  hs-opentelemetry-api-types.cabal
api-types/src/OpenTelemetry/Attributes/: Attribute.hs  Key.hs
api/bench/: HexBench.hs  Main.hs
api/benchmark/: Main.hs
api/cbits/: hex.c  hs_otel_hex.c  hs_otel_rng.c  hs_otel_time.c
api/include/: hs_otel_hex.h
api/test/: Spec.hs
benchmarks/: .gitignore  README.md  components.txt
docs/: migration-guide.md
examples/: .env  README.md
examples/http-server/: Main.hs  Makefile  README.md  http-server.cabal  main.hs
examples/hw-kafka-client/: LICENSE  README.md  docker-compose.yaml  hw-kafka-client-example.cabal
examples/hw-kafka-client-example/: LICENSE  README.md  docker-compose.yaml  hw-kafka-client-example.cabal
examples/hw-kafka-client-example/app/consumer/: Main.hs
examples/hw-kafka-client-example/app/producer/: Main.hs
examples/hw-kafka-client/app/consumer/: Main.hs
examples/yesod-subsite/: Makefile  README.md  yesod-subsite.cabal
examples/yesod-subsite/src/: Subsite.hs  main.hs
examples/yesod-subsite/src/Subsite/: Data.hs
instrumentation/co-log/: ChangeLog.md  README.md  hs-opentelemetry-instrumentation-co-log.cabal
instrumentation/co-log/src/OpenTelemetry/Instrumentation/: CoLog.hs
instrumentation/co-log/test/: Spec.hs
instrumentation/ghc-metrics/: ChangeLog.md  README.md  hs-opentelemetry-instrumentation-ghc-metrics.cabal
instrumentation/ghc-metrics/cbits/: process_metrics.c
instrumentation/ghc-metrics/src/OpenTelemetry/Instrumentation/: GHCMetrics.hs  ProcessMetrics.hs
instrumentation/ghc-metrics/test/: Spec.hs
instrumentation/hw-kafka-client/: CHANGELOG.md  LICENSE  README.md  hs-opentelemetry-instrumentation-hw-kafka-client.cabal
instrumentation/hw-kafka-client/src/OpenTelemetry/Instrumentation/: Kafka.hs
instrumentation/hw-kafka-client/test/: Spec.hs
instrumentation/katip/: ChangeLog.md  README.md  hs-opentelemetry-instrumentation-katip.cabal
instrumentation/katip/src/OpenTelemetry/Instrumentation/: Katip.hs
instrumentation/katip/test/: Spec.hs
instrumentation/monad-logger/: ChangeLog.md  LICENSE  README.md  hs-opentelemetry-instrumentation-monad-logger.cabal
instrumentation/monad-logger/src/OpenTelemetry/Instrumentation/: MonadLogger.hs
instrumentation/monad-logger/test/: Spec.hs
instrumentation/persistent-mysql/: CHANGELOG.md  hs-opentelemetry-instrumentation-persistent-mysql.cabal
instrumentation/persistent-mysql/src/OpenTelemetry/Instrumentation/Persistent/: MySQL.hs
instrumentation/tasty/: ChangeLog.md  Changelog.md  README.md  hs-opentelemetry-instrumentation-tasty.cabal
instrumentation/tasty/src/OpenTelemetry/Instrumentation/: Tasty.hs
instrumentation/tasty/tests/: Main.hs
instrumentation/tasty/tests/OpenTelemetry/Instrumentation/Tasty/: Tests.hs
nix/: ghc.nix  haskell-overlay.nix  haskell-packages.nix  matrix.nix  pkgs.nix  sources.json  tls.patch
otlp/: .gitattributes  ChangeLog.md  README.md  Setup.hs  hs-opentelemetry-otlp.cabal  otel-otlp.cabal  package.yaml
propagators/datadog/: CHANGELOG.md  Changelog.md  LICENSE  README.md  hs-opentelemetry-propagator-datadog.cabal
propagators/datadog/benchmark/header-codec/: main.hs
propagators/datadog/old-src/: Raw.hs  String.hs
propagators/datadog/src/OpenTelemetry/Propagator/: Datadog.hs
propagators/datadog/src/OpenTelemetry/Propagator/Datadog/: Internal.hs
propagators/datadog/test/spec/OpenTelemetry/Propagator/: DatadogSpec.hs
propagators/datadog/test/spec/OpenTelemetry/Propagator/Datadog/: InternalSpec.hs
propagators/jaeger/: ChangeLog.md  LICENSE  README.md  hs-opentelemetry-propagator-jaeger.cabal  otel-propagator-jaeger.cabal  package.yaml
propagators/jaeger/src/OpenTelemetry/Propagator/: Jaeger.hs
propagators/jaeger/src/OpenTelemetry/Propagator/Jaeger/: Internal.hs
propagators/jaeger/test/OpenTelemetry/Propagator/: JaegerSpec.hs
propagators/xray/: ChangeLog.md  README.md  hs-opentelemetry-propagator-xray.cabal
propagators/xray/src/OpenTelemetry/Propagator/: XRay.hs
propagators/xray/src/OpenTelemetry/Propagator/XRay/: Internal.hs
propagators/xray/test/OpenTelemetry/Propagator/: XRaySpec.hs
scripts/: bench-regression  cas-repro.hi  create-tags  fix-stack-compilation.sh  fix-stack-v2.sh  gen-protos  run-benchmarks  upload-all  verify-stack.sh
sdk/: ChangeLog.md  README.md  hs-opentelemetry-sdk.cabal  otel-sdk.cabal  package.yaml
semantic-conventions/: CHANGELOG.md  LICENSE  Setup.hs  hs-opentelemetry-semantic-conventions.cabal
test/: Spec.hs
(+680 files in other folders)
