cabal-version: >= 1.10

name: http-server
version: 0.0.0
build-type: Simple

executable http-server
  hs-source-dirs: .
  main-is: main.hs
  build-depends: base == 4.*,
                 hs-opentelemetry-api,
                 hs-opentelemetry-sdk,
                 hs-opentelemetry-propagator-datadog,
                 hs-opentelemetry-propagator-w3c,
                 hs-opentelemetry-instrumentation-wai,
                 hs-opentelemetry-instrumentation-http-client,
                 bytestring,
                 http-client,
                 http-types,
                 wai,
                 warp
  ghc-options: -Wall
               -Wcompat
               -threaded
               -with-rtsopts=-N
  default-language: Haskell2010
