cabal-version:   3.0
name:            hw-kafka-client-example
version:         1.0.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Alberto Fanton
maintainer:      alberto.fanton@protonmail.com
copyright:       2024 Ian Duncan, Mercury Technologies
homepage:        https://github.com/iand675/hs-opentelemetry#readme
bug-reports:     https://github.com/iand675/hs-opentelemetry/issues
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -threaded

executable producer
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-instrumentation-hw-kafka-client ^>= 1.0
    , hs-opentelemetry-sdk ^>= 1.0
    , hw-kafka-client

  hs-source-dirs:   app/producer
  default-language: Haskell2010

executable consumer
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , either
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-instrumentation-hw-kafka-client ^>= 1.0
    , hs-opentelemetry-sdk ^>= 1.0
    , hw-kafka-client
    , text

  hs-source-dirs:   app/consumer
  default-language: Haskell2010
