cabal-version:   3.0
name:            hw-kafka-client-example
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Alberto Fanton
maintainer:      alberto.fanton@protonmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -threaded

executable producer
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , hs-opentelemetry-api
    , hs-opentelemetry-instrumentation-hw-kafka-client
    , hs-opentelemetry-sdk
    , hw-kafka-client

  hs-source-dirs:   app/producer
  default-language: Haskell2010

executable consumer
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , either
    , hs-opentelemetry-api
    , hs-opentelemetry-instrumentation-hw-kafka-client
    , hs-opentelemetry-sdk
    , hw-kafka-client
    , text

  hs-source-dirs:   app/consumer
  default-language: Haskell2010
