cabal-version: 1.12
name:               hs-opentelemetry-instrumentation-co-log
version:            0.1.0.0
synopsis:           Bridge co-log to OpenTelemetry Logs
description:
  Provides LogAction values that forward co-log messages to the
  OpenTelemetry Logs pipeline with automatic trace correlation.
  Supports both the standard co-log Message type and arbitrary
  custom message types via a conversion function.
category:           OpenTelemetry, Logging
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
author:             Ian Duncan
maintainer:         ian@iankduncan.com
copyright:          2024-2026 Ian Duncan, Mercury Technologies
license:            BSD3
license-file:       LICENSE
build-type:         Simple

source-repository head
  type: git
  location: https://github.com/iand675/hs-opentelemetry

library
  exposed-modules:
      OpenTelemetry.Instrumentation.CoLog
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , co-log >=0.6 && <0.7
    , co-log-core >=0.3 && <0.4
    , hs-opentelemetry-api >=0.4 && <0.5
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-co-log-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , co-log >=0.6 && <0.7
    , co-log-core >=0.3 && <0.4
    , hs-opentelemetry-api >=0.4 && <0.5
    , hs-opentelemetry-exporter-in-memory >=0.0 && <0.1
    , hs-opentelemetry-instrumentation-co-log
    , hs-opentelemetry-sdk >=0.1 && <0.2
    , hspec
    , text
    , vector
  default-language: Haskell2010
