cabal-version: 2.0
name:               hs-opentelemetry-instrumentation-co-log
version:            1.0.0.0
synopsis:           Bridge co-log to OpenTelemetry Logs
description:
  Provides LogAction values that forward co-log messages to the
  OpenTelemetry Logs pipeline with automatic trace correlation.
  Supports both the standard co-log Message type and arbitrary
  custom message types via a conversion function.
category:           OpenTelemetry, Logging
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
author:             Ian Duncan
maintainer:         ian@iankduncan.com
copyright:          2024-2026 Ian Duncan, Mercury Technologies
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/iand675/hs-opentelemetry

library
  exposed-modules:
      OpenTelemetry.Instrumentation.CoLog
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , co-log >=0.6 && <0.8
    , co-log-core >=0.3 && <0.4
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-semantic-conventions >= 1.40 && < 2
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-co-log-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , co-log >=0.6 && <0.8
    , co-log-core >=0.3 && <0.4
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-exporter-in-memory ^>= 1.0
    , hs-opentelemetry-instrumentation-co-log ^>= 1.0
    , hs-opentelemetry-sdk ^>= 1.0
    , hspec
    , text
    , vector
  default-language: Haskell2010
