cabal-version:   3.0
name:            hs-opentelemetry-instrumentation-hw-kafka-client
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Alberto Fanton
maintainer:      alberto.fanton@protonmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  OpenTelemetry.Instrumentation.Kafka

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                  >=4.7 && <5
    , text
    , bytestring
    , hs-opentelemetry-api
    , hs-opentelemetry-semantic-conventions
    , hw-kafka-client
    , unliftio-core
    , case-insensitive
    , http-types

  hs-source-dirs:   src
  default-language: Haskell2010
