cabal-version: 1.12
name:               hs-opentelemetry-instrumentation-katip
version:            0.1.0.0
synopsis:           Bridge Katip structured logging to OpenTelemetry Logs
description:
  Provides a Katip Scribe that forwards structured log items to the
  OpenTelemetry Logs pipeline with automatic trace correlation. Katip's
  rich structured payloads (namespaces, JSON context, source locations)
  are preserved as OTel log record attributes.
category:           OpenTelemetry, Logging
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
author:             Ian Duncan
maintainer:         ian@iankduncan.com
copyright:          2024-2026 Ian Duncan, Mercury Technologies
license:            BSD3
license-file:       LICENSE
build-type:         Simple

source-repository head
  type: git
  location: https://github.com/iand675/hs-opentelemetry

library
  exposed-modules:
      OpenTelemetry.Instrumentation.Katip
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , hs-opentelemetry-api >=0.4 && <0.5
    , katip >=0.8 && <0.9
    , template-haskell
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-katip-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-opentelemetry-api >=0.4 && <0.5
    , hs-opentelemetry-exporter-in-memory >=0.0 && <0.1
    , hs-opentelemetry-instrumentation-katip
    , hs-opentelemetry-sdk >=0.1 && <0.2
    , hspec
    , katip >=0.8 && <0.9
    , text
    , vector
  default-language: Haskell2010
