cabal-version: 2.0
name:               hs-opentelemetry-instrumentation-katip
version:            1.0.0.0
synopsis:           Bridge Katip structured logging to OpenTelemetry Logs
description:
  Provides a Katip Scribe that forwards structured log items to the
  OpenTelemetry Logs pipeline with automatic trace correlation. Katip's
  rich structured payloads (namespaces, JSON context, source locations)
  are preserved as OTel log record attributes.
category:           OpenTelemetry, Logging
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
author:             Ian Duncan
maintainer:         ian@iankduncan.com
copyright:          2024-2026 Ian Duncan, Mercury Technologies
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/iand675/hs-opentelemetry

library
  exposed-modules:
      OpenTelemetry.Instrumentation.Katip
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-semantic-conventions >= 1.40 && < 2
    , katip >=0.8 && <0.9
    , template-haskell
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-katip-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-exporter-in-memory ^>= 1.0
    , hs-opentelemetry-instrumentation-katip ^>= 1.0
    , hs-opentelemetry-sdk ^>= 1.0
    , hspec
    , katip >=0.8 && <0.9
    , text
    , vector
  default-language: Haskell2010
