cabal-version: 2.0
name:               hs-opentelemetry-instrumentation-monad-logger
version:            1.0.0.0
synopsis:           Bridge monad-logger to OpenTelemetry Logs
description:
  Provides a logging callback for @runLoggingT@ that forwards monad-logger
  messages to the OpenTelemetry Logs pipeline with automatic trace
  correlation and source location attributes.
category:           OpenTelemetry, Logging
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
author:             Ian Duncan
maintainer:         ian@iankduncan.com
copyright:          2024-2026 Ian Duncan, Mercury Technologies
license:            BSD3
license-file:       LICENSE
build-type:         Simple

source-repository head
  type: git
  location: https://github.com/iand675/hs-opentelemetry

library
  exposed-modules:
      OpenTelemetry.Instrumentation.MonadLogger
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , fast-logger
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-semantic-conventions >= 1.40 && < 2
    , monad-logger >=0.3 && <0.4
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-monad-logger-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-opentelemetry-api ^>= 1.0
    , hs-opentelemetry-exporter-in-memory ^>= 1.0
    , hs-opentelemetry-instrumentation-monad-logger ^>= 1.0
    , hs-opentelemetry-sdk ^>= 1.0
    , hspec
    , monad-logger >=0.3 && <0.4
    , text
    , vector
  default-language: Haskell2010
