cabal-version: 2.0
name:          hs-opentelemetry-instrumentation-tasty
version:       0.1

description:        Please see the README on GitHub at <https://github.com/iand675/hs-opentelemetry/tree/main/instrumentation/tasty#readme>
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
author:             Michael Peyton Jones
maintainer:         me@michaelpj.com
copyright:          2024 Ian Duncan, Mercury Technologies
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/iand675/hs-opentelemetry

library
  default-language: Haskell2010
  build-depends:
    base >=4.7 && <5
    , hs-opentelemetry-api >=0.1 && <0.2
    , hs-opentelemetry-sdk >=0.0.3 && <0.1
    , tagged ^>= 0.8
    , tasty ^>= 1.5
    , text

  exposed-modules: OpenTelemetry.Instrumentation.Tasty
  hs-source-dirs:  src

test-suite tests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    async
    , base
    , containers
    , hs-opentelemetry-api
    , hs-opentelemetry-instrumentation-tasty
    , hs-opentelemetry-sdk
    , tasty
    , tasty-hunit
    , text

  other-modules:  OpenTelemetry.Instrumentation.Tasty.Tests
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
