cabal-version: 2.4

name: hs-opentelemetry-propagator-datadog
version: 0.0.1.0
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@herp.co.jp

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  default-language: Haskell2010

library
  import: common
  hs-source-dirs: src
  exposed-modules: OpenTelemetry.Propagator.Datadog
                   OpenTelemetry.Propagator.Datadog.Internal
  build-depends: bytestring,
                 hs-opentelemetry-api,
                 http-types,
                 primitive,
                 text
  ghc-options: -Wcompat
               -Wno-name-shadowing
  if impl(ghc >= 6.4)
    ghc-options: -Wincomplete-record-updates
  if impl(ghc >= 6.8)
    ghc-options: -Wmonomorphism-restriction
  if impl(ghc >= 7.0)
    ghc-options: -Wmissing-import-lists
  if impl(ghc >= 7.2)
    ghc-options: -Wincomplete-uni-patterns
                 -Widentities
  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-exported-signatures
                 -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options: -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists
                 -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options: -Wmissing-kind-signatures
                 -Woperator-whitespace
                 -Wredundant-bang-patterns

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
                  old-src
  other-modules: OpenTelemetry.Propagator.DatadogSpec
                 OpenTelemetry.Propagator.Datadog.InternalSpec
                 Raw
                 String
  build-depends: hs-opentelemetry-propagator-datadog,
                 hs-opentelemetry-api,
                 bytestring,
                 hspec,
                 pretty-hex,
                 primitive,
                 QuickCheck
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover

benchmark header-codec
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  other-modules: Raw
                 String
  hs-source-dirs: benchmark/header-codec
                  old-src
  build-depends: hs-opentelemetry-propagator-datadog,
                 hs-opentelemetry-api,
                 bytestring,
                 criterion,
                 deepseq,
                 primitive
